--- a/.babelrc
+++ b/.babelrc
@@ -1,9 +1,8 @@
 {
-  "presets": ["env", "react"],
-  "plugins": ["transform-class-properties"],
+  "presets": ["@babel/preset-env", "@babel/preset-react"],
+  "plugins": ["@babel/plugin-proposal-class-properties"],
   "env": {
     "production": {
-      "plugins": ["babel-plugin-add-module-exports"]
     }
   }
 }
