--- a/package.json
+++ b/package.json
@@ -17,38 +17,35 @@
     "test": "test"
   },
   "peerDependencies": {
-    "react": ">=16.8.0 <17.0.0"
+    "react": ">=16.8.0 <18.0.0"
   },
   "dependencies": {
-    "fbemitter": "^2.1.1",
-    "fbjs": "^1.0.0",
-    "prop-types": "^15.6.0"
+    "fbemitter": "^3.0.0",
+    "fbjs": "^3.0.0",
+    "prop-types": "^15.7.2"
   },
   "devDependencies": {
-    "assert": "^1.3.0",
-    "babel-cli": "^6.26.0",
-    "babel-eslint": "^8.2.2",
-    "babel-plugin-add-module-exports": "^0.2.1",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-react": "^6.24.1",
-    "doctoc": "^1.3.1",
-    "enzyme": "^3.10.0",
-    "enzyme-adapter-react-16": "^1.14.0",
-    "enzyme-to-json": "^3.3.1",
-    "es6-promise": "^4.2.4",
-    "eslint": "^4.18.0",
-    "eslint-plugin-babel": "^4.1.2",
-    "eslint-plugin-promise": "^3.6.0",
-    "eslint-plugin-react": "^7.7.0",
-    "fbemitter": "^2.1.1",
-    "fbjs": "^1.0.0",
-    "jest": "^22.4.0",
-    "node-localstorage": "^1.3.0",
-    "react": "^16.8.0",
-    "react-dom": "^16.8.0",
-    "uuid": "^3.2.1"
+    "@babel/cli": "^7.14.3",
+    "@babel/core": "^7.14.3",
+    "@babel/plugin-proposal-class-properties": "^7.13.0",
+    "@babel/preset-env": "^7.14.4",
+    "@babel/preset-react": "^7.13.13",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.1",
+    "babel-eslint": "^10.1.0",
+    "doctoc": "^2.0.0",
+    "enzyme": "^3.11.0",
+    "enzyme-to-json": "^3.6.2",
+    "eslint": "^7.27.0",
+    "eslint-plugin-babel": "^5.3.1",
+    "eslint-plugin-promise": "^5.1.0",
+    "eslint-plugin-react": "^7.23.2",
+    "fbemitter": "^3.0.0",
+    "fbjs": "^3.0.0",
+    "jest": "^27.0.1",
+    "node-localstorage": "^2.1.6",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "uuid": "^8.3.2"
   },
   "scripts": {
     "test": "jest",
@@ -57,10 +54,15 @@
     "lint:fix": "eslint --ignore-path .gitignore --fix ."
   },
   "jest": {
-    "setupTestFrameworkScriptFile": "<rootDir>test/setup.js",
+    "resetMocks": true,
+    "restoreMocks": true,
+    "setupFilesAfterEnv": [
+      "<rootDir>test/setup.js"
+    ],
     "snapshotSerializers": [
       "enzyme-to-json/serializer"
     ],
+    "testEnvironment": "jsdom",
     "testURL": "http://example.com"
   },
   "repository": {
