--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2
 jobs:
   build:
     docker:
-      - image: circleci/node:12-browsers
+      - image: cimg/node:16.2.0
 
     steps:
       - checkout
