--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "test": "jest",
     "build": "doctoc . --github --title '<h1>Table of Contents</h1>'; babel src --out-dir lib;",
     "format": "prettier --write **/*.{js,jsx}",
+    "format:check": "yarn format --check",
     "lint": "eslint --ignore-path .gitignore .",
     "lint:fix": "eslint --ignore-path .gitignore --fix .",
     "prepare": "husky install"
