--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
   },
   "scripts": {
     "test": "jest",
-    "build": "doctoc . --github --title '<h1>Table of Contents</h1>'; babel src --out-dir lib;",
+    "build": "doctoc README.md --github --title '<h1>Table of Contents</h1>'; babel src --out-dir lib;",
     "format": "prettier --write **/*.{js,jsx}",
     "format:check": "yarn format --check",
     "lint": "eslint --ignore-path .gitignore .",
