--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "enzyme-to-json": "^3.6.2",
     "eslint": "^7.27.0",
     "eslint-plugin-babel": "^5.3.1",
+    "eslint-plugin-jest": "^24.3.6",
     "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-react": "^7.23.2",
     "fbemitter": "^3.0.0",
